//  Copyright 2020 Two Sigma Investments, LP.
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

syntax = "proto3";

package image;

message marker {
    uint64 seq = 1;
    oneof body {
        // Denotes the filename of the next upcoming markers (denoted as current file)
        string filename = 2;
        // Incoming data for the current file
        uint32 file_data = 3;
        // EOF of current file is reached
        bool file_eof = 4;
        // EOF of image is reached
        bool image_eof = 5;
    }
}
